Fix color contrast for a better accessibility

--- a/style.css
+++ b/style.css
@@ -493,9 +493,18 @@ textarea:focus {
     animation: slidedown 1.5s linear forwards;
   }
 
+  .nav-desktop:hover {
+    background-color: #42526e;
+  }
+
   .nav-desktop a {
     font-size: 1.2rem;
     color: var(--primary-green-light);
+  }
+
+  .nav-desktop a:hover {
+    transform: scale(1.2);
+    transition: transform 0.3s ease-out;
   }
 
   @keyframes slidedown {
